--- a/codigo/interfaz/mainwindow.ui
+++ b/codigo/interfaz/mainwindow.ui
@@ -36,25 +36,6 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QListView" name="listView">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>100</width>
-          <height>0</height>
-         </size>
-        </property>
-       </widget>
-      </item>
      </layout>
     </item>
     <item row="0" column="0">
@@ -67,16 +48,16 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_2">
+       <widget class="QPushButton" name="pushButton_3">
         <property name="text">
-         <string>Unir Conceptos</string>
+         <string>Editar Concepto</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_3">
+       <widget class="QPushButton" name="pushButton_2">
         <property name="text">
-         <string>Editar Concepto</string>
+         <string>Editar Uniones</string>
         </property>
        </widget>
       </item>
@@ -110,6 +91,7 @@
     <addaction name="actionGuardar_Como"/>
     <addaction name="separator"/>
     <addaction name="actionSalir"/>
+    <addaction name="actionExportar"/>
    </widget>
    <addaction name="menuArchivo"/>
   </widget>
@@ -136,6 +118,11 @@
   <action name="actionSalir">
    <property name="text">
     <string>salir</string>
+   </property>
+  </action>
+  <action name="actionExportar">
+   <property name="text">
+    <string>exportar</string>
    </property>
   </action>
  </widget>
