--- a/codigo/interfaz/mainwindow.ui
+++ b/codigo/interfaz/mainwindow.ui
@@ -62,6 +62,13 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="pushButton_5">
+        <property name="text">
+         <string>Vista Presentacion</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QPushButton" name="pushButton_4">
         <property name="text">
          <string>Iniciar Presentacion</string>
